# cpp_spider_client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cert.pem  key.pem
Project/: AbstractLogHandle.hpp  CSpiderCore.hpp  Configuration.hpp  Connection.hpp  KeyLogger.hpp  KeyLoggerFactory.hpp  LazySingleton.hpp  LogHandle.hpp  main.cpp
Project/Core/: CSpiderCore.hpp  ClientSession.hpp  CommandableSession.hpp  ServerCommandSession.hpp
Project/KeyLogger/: KeyLogger.hpp  KeyLoggerFactory.hpp
Project/KeyLogger/details/: LinuxKeyLogger.hpp  OSXEventListener.hpp  OSXKeyLogger.hpp  OSXKeyMatchingTable.hpp  WinKeyLogger.hpp
Project/Logging/: AbstractLogHandle.hpp  LogHandle.hpp
Project/Network/: BufferView.hpp  ClientSession.hpp  ErrorCode.hpp  IOManager.hpp  PosixStream.hpp  SSLClientSession.hpp  SSLConnection.hpp  SSLContext.hpp  TCPAcceptor.hpp  Timer.hpp
Project/Protocol/: CommandHandler.hpp  Generated.hpp  Messages.hpp  MessagesEnums.hpp  Protocol.hpp  protocol_raw.txt
Project/Utils/: ILoggable.hpp  JSONification.hpp  Serialization.hpp  Stringification.hpp
Project/Viral/: Viral.hpp
Project/Viral/details/: LinuxViral.hpp  OSXViral.hpp  WindowsViral.hpp
Project/details/: LinuxKeyLogger.hpp  OSXKeyLogger.hpp  WinKeyLogger.hpp
test/: CMakeLists.txt
test/client-test/: CMakeLists.txt  client-test.cpp
